--- a/main.css
+++ b/main.css
@@ -1,15 +1,31 @@
+body  {
+  background-color:#ADD8E6;
+}
+
 #main {
   background: #eee;
-  padding-top: 100px;
+  padding: 10px;
+  display: block;
+  width: 50%;
+  margin: auto;
+  background-color: white;
 }
 header {
-  background-color: blue;
-  padding: 10px;
+  background-color: #1abc9c;
+  color: white;
+  padding: 10px 10px 0px 10px;
+  border-bottom: 10px solid #696969;
   margin: 0;
   width: 100%;
   height:100px;
   z-index: 9999;
   position: fixed;
+}
+figcaption {
+   padding: 10px;
+   background-color: gray;
+   color: white;
+   font-family: monospace;
 }
 
 #header_text {
@@ -21,20 +37,56 @@ header {
   background-color: white;
   padding: 10px;
   margin: 0;
+  height: auto;
 }
 #mypicture {
   position: relative;
-  width: 50%;
+  object-fit: cover;
+  width: 100%;
+  height: 20%;
   maxwidth: 100%
-  height: auto;
+  overflow: hidden;
 }
 .about_me_section {
   margin: 10px auto 10px auto;
-  background-color: gray;
-  color: white;
+  color: black;
   padding: 10px;
 }
-li {
-  margin-left: 20px;
+.myhobbies {
+  border: 2px solid black;
+  color: black;
+  padding: 10px;
+}
+.programming-languages {
+  border: 2px solid black;
+  margin-top: 20px;
+  padding: 10px;
+}
+#navbar {
+  list-style-type: none;
+  margin: 10px 30px 10px 10px;
+  overflow: hidden;
+  background-color: #333;
+}
+.navbar-option {
+  font-family: helvetica;
+  float: left;
+  list-style-type: none;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+}
+a:hover {
+  background-color: #111;
+}
+ul {
   list-style-type: circle;
+  padding-top: 10px;
+  padding-left: 18px;
+}
+.active {
+  background-color: #2F4F4F;
 }
